Add Tencent Cloud TTS and ASR utilities
- Implemented Tencent Cloud TTS functionality with cloud function fallback and local simulation.
- Added Tencent Cloud ASR utility for real-time speech recognition using WebSocket.
- Included error handling and callback mechanisms for both TTS and ASR processes.
- Provided detailed logging for debugging and monitoring purposes.

--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
     "pages/index/index",
     "pages/consult/consult",
     "pages/summary/summary",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/cloud-diagnose/cloud-diagnose",
+    "pages/realtime-asr-test/realtime-asr-test"
   ],
   "window": {
     "navigationBarTitleText": "智能医疗助手"
